# big-data-abnormal-flight-events

./: .gitignore  Big_Data_Project_ML_Modelling.ipynb  Dockerfile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  validate_setup.py
Big Data ML Model/: Keith_handling_large_data.ipynb  README_STREAMLIT.md  consumer_manager.py  kafka_consumer_spark.py  kafka_producer.py  kafka_simulation.ipynb  prediction_handling.ipynb  producer_manager.py  shared_state.py  streamlit_app.py
Big Data ML Model/flight_delay_rf_model/data/: .part-00000-6a18a523-1c84-4114-bfff-51b44f3e696e-c000.snappy.parquet.crc  part-00000-6a18a523-1c84-4114-bfff-51b44f3e696e-c000.snappy.parquet
Big Data ML Model/flight_delay_rf_model/metadata/: .part-00000-56f6d789-5223-4470-ae69-429aaadc72d4-c000.txt.crc  part-00000-56f6d789-5223-4470-ae69-429aaadc72d4-c000.txt
Big Data ML Model/flight_delay_rf_model/treesMetadata/: .part-00000-3b0d00b4-2af1-43f0-9b31-4a3c5bbfd0b4-c000.snappy.parquet.crc  part-00000-3b0d00b4-2af1-43f0-9b31-4a3c5bbfd0b4-c000.snappy.parquet
config/: config.yaml
notebooks/: phase1_eda.ipynb  phase2_features.ipynb  phase3_arr_delay_classification.ipynb
outputs/figures/: .gitkeep
outputs/models/: .gitkeep
src/data/: data_loader.py  data_quality.py  flight_reconstruction.py
src/features/: __init__.py  contextual_features.py  feature_engineering.py  operational_features.py  sequence_features.py  spatial_features.py  temporal_features.py
src/utils/: helpers.py
(+5 files in other folders)
