[project]
name = "big-data-abnormal-flight-events"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]
